--- a/app-tier/ecs-service/cfn.yaml
+++ b/app-tier/ecs-service/cfn.yaml
@@ -55,6 +55,15 @@ Resources:
                 Resource:
                   - arn:aws:ssm:*:*:parameter/*
                   - arn:aws:logs:*:*:log-group:*
+        - PolicyName: AllowECRImagePull
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ecr:GetAuthorizationToken
+                  - ecr:BatchGetImage
+                Resource: "*"
   LogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
