--- a/ParameterStore/cfn.yaml
+++ b/ParameterStore/cfn.yaml
@@ -35,8 +35,7 @@ Resources:
   # PublicSubnet1Parameter:
   #   Type: AWS::SSM::Parameter
   #   Properties:
-  #     Name: PublicSubnet1
-  #     Type: String
+  #     Name: PublicSubnet
   #     Value: '10.1.0.0/24'
   #     Tier: Standard
 
