--- a/ParameterStore/cfn.yaml
+++ b/ParameterStore/cfn.yaml
@@ -55,7 +55,7 @@ Resources:
   # PrivateSubnet2Parameter:
   #   Type: AWS::SSM::Parameter
   #   Properties:
-  #     Name: PrivateSubnet2
+  #     Name: PrivateSubnet
   #     Type: String
   #     Value: '10.1.3.0/24'
   #     Tier: Standard
